# doas-rs

./: Cargo.toml  LICENSE.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
