[package]
name = "doas-rs"
description = "A Rust port of OpenBSD's doas, vidoas, and doasedit in a single binary"
version = "0.1.0"
authors = ["Aldo A. Avalos <99375833+aldorithms@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/aldorithms/doas-rs/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
human-panic = "2.0.2"
pam-client2 = "0.5.2"
users = "0.11.0"
# libc = "0.2.148"
# pam = "0.8.0"
whoami = "1.4.1"
